controllers/metricbeat/testdata/networkpolicy_es.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-allow-es-mb
  namespace: default
  labels:
    cluster: test
    metricbeat.k8s.webcenter.fr: "true"
  annotations:
    metricbeat.k8s.webcenter.fr: "true"
spec:
  egress:
    - to:
        - podSelector:
            matchLabels:
              cluster: test
              elasticsearch.k8s.webcenter.fr: true
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: elastic
      ports:
        - port: 9200
          protocol: TCP
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      cluster: test
      metricbeat.k8s.webcenter.fr: true
