controllers/metricbeat/testdata/service_default.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-headless-mb
  namespace: default
  labels:
    cluster: test
    metricbeat.k8s.webcenter.fr: "true"
  annotations:
    metricbeat.k8s.webcenter.fr: "true"
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    cluster: test
    metricbeat.k8s.webcenter.fr: "true"
  ports:
    - protocol: TCP
      name: http
      port: 5066
      targetPort: http
